[gd_scene load_steps=3 format=3 uid="uid://baxj1btq22bsa"]

[ext_resource type="Script" path="res://Scripts/scripts_2024/march_24.gd" id="1_ay3j0"]
[ext_resource type="Theme" uid="uid://dg2dxep4h3rjx" path="res://UITheme/KenneyUI/kenneyUI.tres" id="2_6nvsy"]

[node name="March24" type="Node2D"]
script = ExtResource("1_ay3j0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_6nvsy")

[node name="Sunday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 252.0
offset_top = 154.0
offset_right = 444.0
offset_bottom = 291.0
disabled = true
text = "Sunday"

[node name="Monday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 449.0
offset_top = 152.0
offset_right = 646.0
offset_bottom = 293.0
disabled = true
text = "Monday"

[node name="Tuesday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 652.0
offset_top = 153.0
offset_right = 850.0
offset_bottom = 295.0
disabled = true
text = "Tuesday"

[node name="Wednesday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 853.0
offset_top = 152.0
offset_right = 1049.0
offset_bottom = 294.0
disabled = true
text = "Wednesday"

[node name="Thursday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1053.0
offset_top = 152.0
offset_right = 1246.0
offset_bottom = 295.0
disabled = true
text = "Thursday"

[node name="Friday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1249.0
offset_top = 151.0
offset_right = 1447.0
offset_bottom = 294.0
text = "Friday
1st"

[node name="Saturday" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1451.0
offset_top = 152.0
offset_right = 1650.0
offset_bottom = 294.0
disabled = true
text = "Saturday
2nd"

[node name="Sunday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 252.0
offset_top = 305.0
offset_right = 444.0
offset_bottom = 442.0
disabled = true
text = "Sunday
3rd"

[node name="Monday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 449.0
offset_top = 303.0
offset_right = 646.0
offset_bottom = 444.0
text = "Monday
4th"

[node name="Tuesday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 652.0
offset_top = 304.0
offset_right = 850.0
offset_bottom = 446.0
text = "Tuesday
5th"

[node name="Wednesday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 853.0
offset_top = 303.0
offset_right = 1049.0
offset_bottom = 445.0
text = "Wednesday
6th"

[node name="Thursday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1053.0
offset_top = 303.0
offset_right = 1246.0
offset_bottom = 446.0
text = "Thursday
7th"

[node name="Friday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1249.0
offset_top = 302.0
offset_right = 1447.0
offset_bottom = 445.0
text = "Friday
8th"

[node name="Saturday2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1451.0
offset_top = 303.0
offset_right = 1650.0
offset_bottom = 445.0
disabled = true
text = "Saturday
9th"

[node name="Sunday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 251.0
offset_top = 456.0
offset_right = 443.0
offset_bottom = 593.0
disabled = true
text = "Sunday
10th"

[node name="Monday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 454.0
offset_right = 645.0
offset_bottom = 595.0
disabled = true
text = "Monday
11th"

[node name="Tuesday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 651.0
offset_top = 455.0
offset_right = 849.0
offset_bottom = 597.0
disabled = true
text = "Tuesday
12th"

[node name="Wednesday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 852.0
offset_top = 454.0
offset_right = 1048.0
offset_bottom = 596.0
disabled = true
text = "Wednesday
13th"

[node name="Thursday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1052.0
offset_top = 454.0
offset_right = 1245.0
offset_bottom = 597.0
disabled = true
text = "Thursday
14th"

[node name="Friday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1248.0
offset_top = 453.0
offset_right = 1446.0
offset_bottom = 596.0
disabled = true
text = "Friday
15th"

[node name="Saturday3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1451.0
offset_top = 455.0
offset_right = 1650.0
offset_bottom = 597.0
disabled = true
text = "Saturday
16th"

[node name="Sunday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 253.0
offset_top = 607.0
offset_right = 445.0
offset_bottom = 744.0
disabled = true
text = "Sunday
17th"

[node name="Monday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 450.0
offset_top = 605.0
offset_right = 647.0
offset_bottom = 746.0
disabled = true
text = "Monday
18th"

[node name="Tuesday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 653.0
offset_top = 606.0
offset_right = 851.0
offset_bottom = 748.0
disabled = true
text = "Tuesday
19th"

[node name="Wednesday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 854.0
offset_top = 605.0
offset_right = 1050.0
offset_bottom = 747.0
disabled = true
text = "Wednesday
20th"

[node name="Thursday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1054.0
offset_top = 605.0
offset_right = 1247.0
offset_bottom = 748.0
disabled = true
text = "Thursday
21st"

[node name="Friday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1250.0
offset_top = 604.0
offset_right = 1448.0
offset_bottom = 747.0
disabled = true
text = "Friday
22nd"

[node name="Saturday4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1449.0
offset_top = 604.0
offset_right = 1648.0
offset_bottom = 746.0
disabled = true
text = "Saturday
23rd"

[node name="Sunday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 253.0
offset_top = 754.0
offset_right = 445.0
offset_bottom = 891.0
disabled = true
text = "Sunday
24th"

[node name="Monday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 450.0
offset_top = 752.0
offset_right = 647.0
offset_bottom = 893.0
disabled = true
text = "Monday
25th"

[node name="Tuesday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 653.0
offset_top = 753.0
offset_right = 851.0
offset_bottom = 895.0
disabled = true
text = "Tuesday
26th"

[node name="Wednesday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 854.0
offset_top = 752.0
offset_right = 1050.0
offset_bottom = 894.0
disabled = true
text = "Wednesday
27th"

[node name="Thursday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1054.0
offset_top = 752.0
offset_right = 1247.0
offset_bottom = 895.0
disabled = true
text = "Thursday
28th"

[node name="Friday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1250.0
offset_top = 751.0
offset_right = 1448.0
offset_bottom = 894.0
disabled = true
text = "Friday
29th"

[node name="Saturday5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1451.0
offset_top = 753.0
offset_right = 1650.0
offset_bottom = 895.0
disabled = true
text = "Saturday
30th"

[node name="DualSL" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 867.0
offset_top = 72.0
offset_right = 1038.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 22
placeholder_text = "Enter SL"
alignment = 1

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 544.0
offset_top = 16.0
offset_right = 1386.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 32
text = "* Set SL Below Before Selecting Day *"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 72.0
offset_right = 669.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 64
text = "March 2024"

[node name="Label3" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 911.0
offset_top = 82.0
offset_right = 1081.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 32
text = "SL : x Ticks"

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 611.0
offset_top = 957.0
offset_right = 1302.0
offset_bottom = 1039.0
theme_override_font_sizes/font_size = 36
text = "Return to Month Selection"

[node name="Check0829" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 33.0
offset_right = 1737.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
disabled = true
button_pressed = true
text = "8:29 Entry"

[node name="Check0845" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 70.0
offset_right = 1898.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
text = "8:45 Entry"

[node name="Check0900" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 108.0
offset_right = 1898.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
text = "9:00 Entry"

[node name="Check0902" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 146.0
offset_right = 1898.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
text = "9:02 Entry"

[node name="Check0930" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 184.0
offset_right = 1898.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
text = "9:30 Entry"

[node name="Check1000" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = 1701.0
offset_top = 222.0
offset_right = 1908.0
offset_bottom = 258.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 22
text = "10:00 Entry"

[node name="ProfitType" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1430.0
offset_top = 76.0
offset_right = 1565.0
offset_bottom = 118.0
theme_override_font_sizes/font_size = 24
text = "Profit Type:
Static"

[node name="ProfitTypeButton" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 1385.0
offset_top = 78.0
offset_right = 1417.0
offset_bottom = 106.0

[node name="ResetSLButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 738.0
offset_top = 91.0
offset_right = 836.0
offset_bottom = 121.0
text = "Reset SL"

[connection signal="pressed" from="Control/Friday" to="." method="_on_friday_pressed"]
[connection signal="pressed" from="Control/Monday2" to="." method="_on_monday_2_pressed"]
[connection signal="pressed" from="Control/Tuesday2" to="." method="_on_tuesday_2_pressed"]
[connection signal="pressed" from="Control/Wednesday2" to="." method="_on_wednesday_2_pressed"]
[connection signal="pressed" from="Control/Thursday2" to="." method="_on_thursday_2_pressed"]
[connection signal="pressed" from="Control/Friday2" to="." method="_on_friday_2_pressed"]
[connection signal="text_submitted" from="Control/DualSL" to="." method="_on_dual_sl_text_submitted"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="Control/Check0829" to="." method="_on_check_0829_toggled"]
[connection signal="toggled" from="Control/Check0845" to="." method="_on_check_0845_toggled"]
[connection signal="toggled" from="Control/Check0900" to="." method="_on_check_0900_toggled"]
[connection signal="toggled" from="Control/Check0902" to="." method="_on_check_0902_toggled"]
[connection signal="toggled" from="Control/Check0930" to="." method="_on_check_0930_toggled"]
[connection signal="toggled" from="Control/Check1000" to="." method="_on_check_1000_toggled"]
[connection signal="toggled" from="Control/ProfitTypeButton" to="." method="_on_profit_type_button_toggled"]
[connection signal="pressed" from="Control/ResetSLButton" to="." method="_on_reset_sl_button_pressed"]
